gcc/testsuite/algol68/compile/actual-bounds-expected-1.a68
# { dg-options "-fstropping=upper" }  #
BEGIN []INT a := (1,2,3); # { dg-error "actual bounds expected" }  #
      SKIP
END
